err/rbt-github.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/RBTools-0.7.10.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rbt_github'...
Compiling './lib/python3.5/site-packages/rbt_github/command.py'...
***   File "./lib/python3.5/site-packages/rbt_github/command.py", line 60
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rbt_github-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/rbtools'...
Listing './lib/python3.5/site-packages/rbtools/api'...
Listing './lib/python3.5/site-packages/rbtools/api/transport'...
Listing './lib/python3.5/site-packages/rbtools/clients'...
Listing './lib/python3.5/site-packages/rbtools/clients/tests'...
Compiling './lib/python3.5/site-packages/rbtools/clients/tests/test_svn.py'...
***   File "./lib/python3.5/site-packages/rbtools/clients/tests/test_svn.py", line 423
    print result['diff']
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/rbtools/commands'...
Listing './lib/python3.5/site-packages/rbtools/commands/tests'...
Listing './lib/python3.5/site-packages/rbtools/helpers'...
Listing './lib/python3.5/site-packages/rbtools/hooks'...
Listing './lib/python3.5/site-packages/rbtools/testing'...
Listing './lib/python3.5/site-packages/rbtools/utils'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tqdm'...
Listing './lib/python3.5/site-packages/tqdm-4.19.5.dist-info'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
